added button listener and function method

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -25,18 +25,21 @@
                 android:id="@+id/btn1"
                 android:layout_width="100dp"
                 android:layout_height="100dp"
+                android:onClick="makeMove"
                 android:text="" />
 
             <Button
                 android:id="@+id/btn2"
                 android:layout_width="100dp"
                 android:layout_height="100dp"
+                android:onClick="makeMove"
                 android:text="" />
 
             <Button
                 android:id="@+id/btn3"
                 android:layout_width="100dp"
                 android:layout_height="100dp"
+                android:onClick="makeMove"
                 android:text="" />
         </TableRow>
 
@@ -49,18 +52,21 @@
                 android:id="@+id/btn4"
                 android:layout_width="100dp"
                 android:layout_height="100dp"
+                android:onClick="makeMove"
                 android:text="" />
 
             <Button
                 android:id="@+id/btn5"
                 android:layout_width="100dp"
                 android:layout_height="100dp"
+                android:onClick="makeMove"
                 android:text="" />
 
             <Button
                 android:id="@+id/btn6"
                 android:layout_width="100dp"
                 android:layout_height="100dp"
+                android:onClick="makeMove"
                 android:text="" />
         </TableRow>
 
@@ -73,18 +79,21 @@
                 android:id="@+id/btn7"
                 android:layout_width="100dp"
                 android:layout_height="100dp"
+                android:onClick="makeMove"
                 android:text="" />
 
             <Button
                 android:id="@+id/btn8"
                 android:layout_width="100dp"
                 android:layout_height="100dp"
+                android:onClick="makeMove"
                 android:text="" />
 
             <Button
                 android:id="@+id/btn9"
                 android:layout_width="100dp"
                 android:layout_height="100dp"
+                android:onClick="makeMove"
                 android:text="" />
         </TableRow>
 
