refactor the ui with margin and text color

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -26,6 +26,9 @@
                 android:layout_width="100dp"
                 android:layout_height="100dp"
                 android:onClick="makeMove"
+                android:layout_marginRight="5dp"
+                android:textColor="@android:color/background_light"
+                android:textStyle="bold"
                 android:text="" />
 
             <Button
@@ -33,6 +36,9 @@
                 android:layout_width="100dp"
                 android:layout_height="100dp"
                 android:onClick="makeMove"
+                android:layout_marginRight="5dp"
+                android:textColor="@android:color/background_light"
+                android:textStyle="bold"
                 android:text="" />
 
             <Button
@@ -40,6 +46,8 @@
                 android:layout_width="100dp"
                 android:layout_height="100dp"
                 android:onClick="makeMove"
+                android:textColor="@android:color/background_light"
+                android:textStyle="bold"
                 android:text="" />
         </TableRow>
 
@@ -53,6 +61,9 @@
                 android:layout_width="100dp"
                 android:layout_height="100dp"
                 android:onClick="makeMove"
+                android:layout_marginRight="5dp"
+                android:textColor="@android:color/background_light"
+                android:textStyle="bold"
                 android:text="" />
 
             <Button
@@ -60,6 +71,9 @@
                 android:layout_width="100dp"
                 android:layout_height="100dp"
                 android:onClick="makeMove"
+                android:layout_marginRight="5dp"
+                android:textColor="@android:color/background_light"
+                android:textStyle="bold"
                 android:text="" />
 
             <Button
@@ -67,7 +81,10 @@
                 android:layout_width="100dp"
                 android:layout_height="100dp"
                 android:onClick="makeMove"
-                android:text="" />
+                android:text=""
+                android:textColor="@android:color/background_light"
+                android:textStyle="bold"
+                />
         </TableRow>
 
         <TableRow
@@ -80,21 +97,29 @@
                 android:layout_width="100dp"
                 android:layout_height="100dp"
                 android:onClick="makeMove"
-                android:text="" />
+                android:layout_marginRight="5dp"
+                android:text=""
+                android:textStyle="bold"
+                android:textColor="@android:color/background_light"/>
 
             <Button
                 android:id="@+id/btn8"
                 android:layout_width="100dp"
                 android:layout_height="100dp"
                 android:onClick="makeMove"
-                android:text="" />
+                android:layout_marginRight="5dp"
+                android:textStyle="bold"
+                android:text=""
+                android:textColor="@android:color/background_light"/>
 
             <Button
                 android:id="@+id/btn9"
                 android:layout_width="100dp"
                 android:layout_height="100dp"
                 android:onClick="makeMove"
-                android:text="" />
+                android:text=""
+                android:textStyle="bold"
+                android:textColor="@android:color/background_light" />
         </TableRow>
 
     </TableLayout>
